# talky-talky

./: .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml  package-lock.json  package.json  pyproject.toml
.claude/: settings.json
.github/workflows/: ci.yml  docker-publish.yml  release.yml
audiobook_mcp/: __init__.py  server.py
audiobook_mcp/db/: __init__.py  connection.py  schema.py
audiobook_mcp/tools/: __init__.py  audio.py  chapters.py  characters.py  import_tools.py  projects.py  segments.py  tts.py  voice_samples.py
audiobook_mcp/utils/: __init__.py  ffmpeg.py  parser.py
src/: index.ts
src/db/: connection.ts  schema.ts
src/schemas/: index.ts
src/tools/: audio.ts  chapters.ts  characters.ts  import.ts  projects.ts  segments.ts
src/utils/: ffmpeg.ts  parser.ts
talky_talky/: server.py
talky_talky/tools/: audio.py
talky_talky/tools/transcription/: __init__.py  base.py  faster_whisper.py  whisper.py
talky_talky/tools/tts/: __init__.py  base.py  chatterbox.py  chatterbox_turbo.py  cosyvoice.py  kokoro.py  maya1.py  mira.py  soprano.py  utils.py  vibevoice.py  xtts.py
tests/: conftest.py  test_audio.py  test_engine_registry.py  test_utils.py
