[project]
name = "talky-talky"
version = "0.2.0"
description = "Text-to-Speech MCP server with pluggable engine support for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    # Audio processing
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
]

[project.optional-dependencies]
# Maya1 TTS support (voice design from descriptions)
maya1 = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "snac",
]
# Chatterbox TTS support (voice cloning with emotion control)
chatterbox = [
    "chatterbox-tts>=0.1.0",
    "numpy<2.4",  # Chatterbox requires numpy < 2.4 for numba compatibility
    "onnx==1.16.0",  # Pin onnx for ml_dtypes compatibility
]
# MiraTTS support (fast voice cloning with 48kHz output)
# Uses transformers backend for cross-platform compatibility (CUDA, MPS, CPU)
mira = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "ncodec @ git+https://github.com/ysharma3501/FastBiCodec.git",
    "fastaudiosr @ git+https://github.com/ysharma3501/FlashSR.git",
    "librosa>=0.10.0",
    "einops>=0.6.0",
    "onnxruntime>=1.15.0",
]
# All TTS engines
tts = [
    "talky-talky[maya1,chatterbox,mira]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
talky-talky = "talky_talky.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["talky_talky"]

[tool.ruff]
line-length = 100
target-version = "py310"
