[project]
name = "talky-talky"
version = "0.2.0"
description = "Text-to-Speech MCP server with pluggable engine support for AI agents"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.0.0",
    "requests>=2.28.0",
    # Audio processing
    "pydub>=0.25.0",
    "soundfile>=0.12.0",
    "numpy>=1.26.0",  # Ensure compatible numpy for Python 3.12+
]

[project.optional-dependencies]
# Whisper transcription (via transformers - best accuracy)
whisper = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
]
# Faster-Whisper transcription (CTranslate2 optimized - 4x faster)
faster-whisper = [
    "faster-whisper>=1.0.0",
]
# All transcription engines
transcription = [
    "talky-talky[whisper,faster-whisper]",
]
# Maya1 TTS support (voice design from descriptions)
maya1 = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "snac",
]
# Chatterbox TTS support (voice cloning with emotion control)
# Also includes Chatterbox Turbo (fast voice cloning)
chatterbox = [
    "chatterbox-tts>=0.1.0",
    "numpy<2.4",  # Chatterbox requires numpy < 2.4 for numba compatibility
    "onnx==1.16.0",  # Pin onnx for ml_dtypes compatibility
]
# MiraTTS support (fast voice cloning with 48kHz output)
# Uses transformers backend for cross-platform compatibility (CUDA, MPS, CPU)
mira = [
    "torch>=2.0.0",
    "transformers>=4.35.0",
    "ncodec @ git+https://github.com/ysharma3501/FastBiCodec.git",
    "fastaudiosr @ git+https://github.com/ysharma3501/FlashSR.git",
    "librosa>=0.10.0",
    "einops>=0.6.0",
    "onnxruntime>=1.15.0",
]
# XTTS-v2 support (multilingual voice cloning)
# Works on CUDA, MPS, and CPU
xtts = [
    "TTS>=0.22.0",
]
# Kokoro support (voice selection from 54 pre-built voices)
# Requires espeak-ng system dependency
kokoro = [
    "kokoro>=0.9.2",
]
# Soprano support (ultra-fast CUDA TTS)
# CUDA GPU required - no CPU/MPS support
soprano = [
    "soprano-tts",
]
# VibeVoice support (Microsoft real-time and long-form TTS)
# Note: VibeVoice requires cloning and installing from source:
# git clone https://github.com/microsoft/VibeVoice.git && pip install -e .
# Not included in tts extra - requires separate environment due to dependency conflicts
vibevoice = [
    # Base dependencies only - full VibeVoice requires source install
    "soundfile>=0.12.0",
]
# CosyVoice3 support (Alibaba multilingual voice cloning)
# Requires cloning: git clone --recursive https://github.com/FunAudioLLM/CosyVoice.git
# and: pip install -r requirements.txt
# Note: CosyVoice has complex dependencies that require manual setup
cosyvoice = [
    "huggingface_hub>=0.20.0",
    "torchaudio>=2.0.0",
    # Note: Full CosyVoice requires cloning the repo and installing requirements.txt
]
# All TTS engines (core engines without dependency conflicts)
tts = [
    "talky-talky[maya1,chatterbox,mira,xtts,kokoro,soprano]",
]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "ruff>=0.1.0",
]

[project.scripts]
talky-talky = "talky_talky.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["talky_talky"]

[tool.ruff]
line-length = 100
target-version = "py310"
